<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/favorites" />

    <item
        android:id="@+id/action_list_view"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/show_list_view" />
    <item
        android:id="@+id/action_grid_view"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/show_grid_view" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/setting" />


</menu>